@@ -232,18 +232,7 @@ defineTest(linkStaticLibrary) {
     path = $$1
     target = $$2
 
-    mac {
-        wholeArchivePreFlag = -Wl,-all_load
-        wholeArchivePostFlag = -Wl,-noall_load
-    } else:win32-msvc*|wince*|win32-icc {
-        wholeArchivePreFlag = /OPT:REF
-        wholeArchivePostFlag =
-    } else {
-        wholeArchivePreFlag = -Wl,-whole-archive
-        wholeArchivePostFlag = -Wl,-no-whole-archive
-    }
-
-    LIBS = $$wholeArchivePreFlag -l$$target $$wholeArchivePostFlag $$LIBS
+    LIBS = -l$$target $$LIBS
 
     win32-msvc*|wince*|win32-icc {
         LIBS = -L$$path $$LIBS
